welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:16: error: reassignment to val
				}while(colIni = c)
                                              ^